# spares

./: .gitmodules  Cargo.toml  README.md
docs/: README.md  book.toml
docs/src/: SUMMARY.md  comparison.md  concepts.md  contributing.md  getting_started.md  roadmap.md  searching.md  workflows.md
misc/: spares.lua
spares/: Cargo.toml
spares/migrations/: 20240326145400_main_data.down.sql  20240326145400_main_data.up.sql
spares/src/: config.rs  helpers.rs  lib.rs  model.rs  schema.rs
spares/src/adapters/: migration.rs  mod.rs
spares/src/adapters/impls/: anki.rs  mod.rs  spares.rs
spares/src/api/: card.rs  mod.rs  parser.rs  review.rs  scheduler.rs  statistics.rs
spares/src/api/note/: basic.rs  create.rs  mod.rs  render.rs  search.rs  update.rs
spares/src/api/tag/: mod.rs  query.rs
spares/src/api/tests/: fuzz_data.rs  mod.rs
spares/src/parsers/: clozes.rs  generate_files.rs  helpers.rs  mod.rs  notes.rs  settings.rs
spares/src/parsers/cards/: match_cards.rs  mod.rs  overlapper.rs
spares/src/parsers/cards/card_tests/: mod.rs
spares/src/parsers/image_occlusion/: construct.rs  mod.rs  test.rs  utils.rs
spares/src/parsers/impls/: mod.rs
spares/src/parsers/impls/latex/: mod.rs  template.tex
spares/src/parsers/impls/markdown/: cloze_parser.rs  mod.rs  template.md
spares/src/parsers/impls/typst/: data_parser.rs  mod.rs  template.typ
spares/src/schedulers/: mod.rs
spares/src/schedulers/fsrs/: disperse.rs  easy_days.rs  mod.rs  reposition.rs  utils.rs
spares/src/search/: evaluator.rs  lexer.rs  mod.rs  parser.rs
spares/test_data/note_generator/: test-b72d8bba-cce9-4a40-b4a5-16eb5da26586.md
spares_cli/: Cargo.toml
spares_cli/src/: graph.rs  import.rs  main.rs  migrate.rs  tree.rs
spares_cli/src/review/: mod.rs  utils.rs
spares_cli/src/sync/: interactive.rs  mod.rs  utils.rs
spares_io/: Cargo.toml
spares_io/frontend/: .ignore  README.md  bun.lockb  eslint.config.js  index.html  package.json  vite.config.ts
spares_io/frontend/src/: App.tsx
spares_io/src/: main.rs
spares_server/: Cargo.toml
spares_server/src/: main.rs  route.rs
spares_server/src/handlers/: card.rs  mod.rs  note.rs  parser.rs  review.rs  scheduler.rs  tag.rs
