[package]
name = "spares_cli"
version = "0.0.1-alpha.1"
description = "A CLI to interface with spares"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.29", features = ["derive", "cargo", "env"] }
clap_complete_command = "0.6.1"
colored = "2.2.0"
copy_dir = "0.1.3"
env_logger = "0.11.6"
indexmap = "2.7.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
inquire = "0.7.5"
itertools = "0.13.0"
log = "0.4.25"
miette = { version = "7.5.0", features = ["fancy"] }
open = "5.3.2"
petgraph = "0.6.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
spares = { path = "../spares" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono", "json", "migrate"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"

[lints]
workspace = true
